setting up project to production with celery, nginx and flower

--- a/docker-dev.yml
+++ b/docker-dev.yml
@@ -12,7 +12,7 @@ services:
             - 5432
 
     webserver:
-        image: python:3.6
+        image: django-docker-bootstrap
         container_name: webserver
         build:
             context: .
